--- a/WFBank/src/main/resources/application.yml
+++ b/WFBank/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 8081
+  error:
+    include-stacktrace: never
 spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/bank
@@ -9,4 +11,6 @@ spring:
     hibernate:
       ddl-auto: create
     show-sql: true
-    
+logging:
+  level:
+    org.zalando.logbook: TRACE
