--- a/WFBank/src/main/resources/application.yml
+++ b/WFBank/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8080
   error:
     include-stacktrace: never
 spring:
@@ -9,7 +9,7 @@ spring:
     password: Password@1
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
 
   mail:
