--- a/WFBank/src/main/resources/application.yml
+++ b/WFBank/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     password: Password@1
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
 
   mail:
