--- a/WFBank/src/main/resources/application.yml
+++ b/WFBank/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/bank
     username: root
-    password: Password@1
+    password: 2321
   jpa:
     hibernate:
       ddl-auto: update
