--- a/WFBank/src/main/resources/application.yml
+++ b/WFBank/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
-  port: 8080
+  port: 8081
   error:
     include-stacktrace: never
 spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/bank
     username: root
-    password: 2321
+    password: Password@1
   jpa:
     hibernate:
       ddl-auto: update
